company-details: fixed section 2 so it stretches

--- a/src/app/company/company-details/company-details.component.css
+++ b/src/app/company/company-details/company-details.component.css
@@ -11,20 +11,21 @@
     background: mediumpurple;
     background: transparent;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
 }
 
 .section {
     display: flex;
     flex-direction: column;
-    min-height: 40px;
     min-width: 100%;
-    max-height: 80%;
+    min-height: 40px;
+    max-height: 100%;
+    /*min-height: 100%;*/
     /*margin: 0px;*/
     /*justify-content: center;
     align-items: center;*/
     background-color: yellow;
-    background: transparent;
+    /*background: transparent;*/
 
 }
 
@@ -38,7 +39,7 @@
     /*justify-content: center;
     align-items: center;*/
     background-color: brown;
-    /*background: transparent;*/
+    background: transparent;
 }
 
 .column {
@@ -46,7 +47,9 @@
     flex: 1 1 0px;
     flex-direction: column;
     background-color: orange;
-    background: transparent;
+    max-height:100%;
+    min-height: 100%;
+    /*background: transparent;*/
     color: white;
 }
 
@@ -71,17 +74,51 @@
     max-width: 100%;
     z-index: 2;
 }
-#sec1row1col2, #sec3row1col2 {
+.spacer {
+    max-height: 70px;
+    min-height: 70px;
+    max-width: 100vw;
+    min-width: 100vw;
+    background-color: white;
+    background: transparent;
+}
+#sec1row1col2 {
     flex: 10 10 0px;
     background-color: orangered;
     /*background: transparent;*/
 }
+.cd-midbar {
+    background-color: black;
+    background: transparent;
+    color: white;
+    height: 25px;
+    /*font-size: 15px;
+    min-width: 100vw;
+    max-width: 100vw;*/
+}
 
 
-/*#detail-wrapper{
+/*--------COMPANY DETAIL COMPONENT-----------*/
+#detail-wrapper{
     margin-top: 165px;
     margin-bottom: 50px;
-}*/
+}
+#section2 {
+    flex: 1 1 auto;
+    background-color: magenta;
+    background: transparent;
+}
+#sec2row1 {
+    min-height: 100%;
+    flex: 1 1 auto;
+    background-color: sandybrown;
+}
+#sec2row1col1 {
+    flex: 10 10 auto;
+    background-color: orangered;
+    min-height: 100%;
+    /*background: transparent;*/
+}
 
 /*.cd-navbar {
     background-color: black;
@@ -94,29 +131,13 @@
     margin: 5px;
 }*/
 
-.cd-midbar {
-    background-color: black;
-    background: transparent;
-    color: white;
-    height: 25px;
-    /*font-size: 15px;
-    min-width: 100vw;
-    max-width: 100vw;*/
-}
 
 /*.cd-body {
     max-width: 1200px;
     ;
 }*/
 
-.spacer {
-    max-height: 70px;
-    min-height: 70px;
-    max-width: 100vw;
-    min-width: 100vw;
-    background-color: white;
-    background: transparent;
-}
+
 
 /*-------------- COMPANY-DETAILS ----------------------*/
 /*.cd-row {
@@ -153,9 +174,10 @@
     min-width: 100%;
     max-width: 100%;
 }
-#sec3row1col2 {
-    /*margin: 0px;*/
-    /*justify-content: flex-start;*/
+#sec3row1col2{
+    flex: 10 10 0px;
+    background-color: orangered;
+    /*background: transparent;*/
 }
 
 #cd-submit {
